# shop/models/order.py
@@ -1,6 +1,7 @@
 from django.db import models
 from .user import User
 from .product import Product
+from .payment import Payment
 
 class Order(models.Model):
     STATUS_CHOICES = [
@@ -12,9 +13,7 @@ class Order(models.Model):
 
     customer = models.ForeignKey(User, on_delete=models.CASCADE, limit_choices_to={'is_customer': True})
     products = models.ManyToManyField(Product, through='OrderItem')
+    payment=models.OneToOneField(Payment,on_delete=models.CASCADE)
     status = models.CharField(max_length=20, choices=STATUS_CHOICES, default='Pending')
     order_datetime = models.DateTimeField(auto_now_add=True)
     exp_delivery_date = models.DateField(blank=True, null=True)
-
-    def __str__(self):
-        return f"Order {self.id} by {self.customer.email}"
