# shop/models/payment.py
@@ -1,11 +1,9 @@
 from django.db import models
-from .order import Order
+from .user import User
 
 class Payment(models.Model):
-    order=models.OneToOneField(Order,on_delete=models.CASCADE)
     amount = models.DecimalField(max_digits=10, decimal_places=2)
     method = models.CharField(max_length=50)
-    created_at = models.DateTimeField(auto_now_add=True)
+    paid_by = models.ForeignKey(User, on_delete=models.CASCADE)
+    
 
-    def __str__(self):
-        return f"Payment for Order {self.order.id}"
